tests/samples/negative/control_flow/range_value_arity.ax
module range_value_arity;

fn main() -> i32 {
    let values = range();
    for value in values {
        return value;
    }
    return 0;
}
